logs/09_10_2024/09_10_2024_19_16_05

[ 2024-09-10 19:16:11,788 ] - DEBUG - root - main.py:17 - Initiated Preprocessing Module

[ 2024-09-10 19:16:11,788 ] - DEBUG - root - processDataIngestion.py:11 - Document Ingestion class initialized

[ 2024-09-10 19:16:17,845 ] - DEBUG - root - processDataIngestion.py:33 - Successfully loaded the input file to the memory

[ 2024-09-10 19:16:17,845 ] - DEBUG - root - processEdit.py:10 - Process Edit Message class initialized

[ 2024-09-10 19:16:17,846 ] - DEBUG - root - processJSON.py:25 - JSON Pre-Processing class initiated

[ 2024-09-10 19:16:17,846 ] - DEBUG - root - utils.py:31 - [INFO] : Loading the configuration data

[ 2024-09-10 19:16:17,860 ] - INFO - root - utils.py:37 - Config Yaml loaded succesfully.

[ 2024-09-10 19:16:17,886 ] - DEBUG - root - processEdit.py:85 - Operation on-line extraction has initiated

[ 2024-09-10 19:16:17,887 ] - DEBUG - root - processEdit.py:32 - Started operation on line level adjustment

[ 2024-09-10 19:16:17,888 ] - DEBUG - root - processEdit.py:67 - Forwarding JSON object for futher pre-processing task

[ 2024-09-10 19:16:17,888 ] - DEBUG - root - processJSON.py:401 - Dealing with missing columns and sheets

[ 2024-09-10 19:16:17,910 ] - DEBUG - root - processJSON.py:55 - Started extraction of claim IDs from the input file

[ 2024-09-10 19:16:17,911 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:16:17,915 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:16:17,930 ] - DEBUG - root - processJSON.py:323 - Working on Hippa Attribute

[ 2024-09-10 19:16:17,934 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:16:17,942 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:16:17,978 ] - DEBUG - root - processJSON.py:269 - max date replacement task is started

[ 2024-09-10 19:16:17,981 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:16:17,984 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:16:17,995 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:16:18,000 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:16:18,115 ] - DEBUG - root - processJSON.py:351 - Dealing with Raw data from COB

[ 2024-09-10 19:16:18,118 ] - DEBUG - root - processJSON.py:269 - max date replacement task is started

[ 2024-09-10 19:16:18,121 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:16:18,126 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:16:18,213 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:16:18,215 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:16:18,227 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:16:18,231 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:16:18,261 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:16:18,267 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:16:18,304 ] - DEBUG - root - processJSON.py:205 - Data cleaning task is started

[ 2024-09-10 19:16:18,308 ] - DEBUG - root - processJSON.py:117 - Data type conversion task is started

[ 2024-09-10 19:16:18,356 ] - DEBUG - root - processJSON.py:87 - Data persistance is started

[ 2024-09-10 19:16:18,366 ] - INFO - root - processJSON.py:101 - Data JSON is stored at the location : C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\artifacts\output\24B121111110_wm_invalidproviderselection.json

[ 2024-09-10 19:16:18,368 ] - DEBUG - root - dataFiltration.py:11 - filterData class initialized

[ 2024-09-10 19:16:18,381 ] - DEBUG - root - dataFiltration.py:235 - Got ['24B121111110_wm_invalidproviderselection.json'] for filtering

[ 2024-09-10 19:16:18,390 ] - DEBUG - root - dataFiltration.py:247 - Started filtering 24B121111110_wm_invalidproviderselection

[ 2024-09-10 19:16:18,390 ] - DEBUG - root - dataFiltration.py:180 - Started filtering and appying 2 filter/s

[ 2024-09-10 19:16:18,402 ] - DEBUG - root - dataFiltration.py:137 - applyFilter initialized for input1.providerdetails.npi == 

[ 2024-09-10 19:16:18,518 ] - ERROR - root - main.py:42 - There seems to be a issue in Preprocessing - Traceback (most recent call last):
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\main.py", line 31, in inputPreprocessUnit
    filterObj.getFilteredInputFile(jsonFileName)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\components\dataFiltration.py", line 255, in getFilteredInputFile
    dataFrames = self.filterInputFile(inputFile, filters)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\components\dataFiltration.py", line 187, in filterInputFile
    dataFrames = self.applyFilter(dataFrames, filterSheet, filterColumn, operator, actualValue) # applying a filter
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\components\dataFiltration.py", line 160, in applyFilter
    dataFrames[filterSheet] = df[df.apply(lambda row: eval(f"{row[filterColumn]}"+operator+f"{actualValue}"), axis=1)]
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\frame.py", line 10361, in apply
    return op.apply().__finalize__(self, method="apply")
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 916, in apply
    return self.apply_standard()
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 1063, in apply_standard
    results, res_index = self.apply_series_generator()
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 1081, in apply_series_generator
    results[i] = self.func(v, *self.args, **self.kwargs)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\0_Expr_Test\1_EXCEL_JSON\1_Input_PreProcessing\components\dataFiltration.py", line 160, in <lambda>
    dataFrames[filterSheet] = df[df.apply(lambda row: eval(f"{row[filterColumn]}"+operator+f"{actualValue}"), axis=1)]
  File "<string>", line 1
    1548200028.0==
                 ^
SyntaxError: unexpected EOF while parsing

